Bug 617789 - Links in view page source when base href exists fixed. r=hsivonen.